Apartado de Ventas

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         <header>
             <h1>📦 Sistema de Gestión de Stock</h1>
             <div class="header-actions">
+                <button id="btn-ir-ventas" class="btn btn-success">🛒 Ir a Ventas</button>
                 <button id="btn-refresh" class="btn btn-secondary">🔄 Actualizar</button>
                 <button id="btn-new-product" class="btn btn-primary">➕ Nuevo Producto</button>
             </div>
