--- a/src/index.html
+++ b/src/index.html
@@ -3,148 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestión de Stock</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <title>Stock - Llantería</title>
+    <link rel="stylesheet" href="css/stock.css">
 </head>
 <body>
     <div class="container">
         <!-- Header -->
         <header>
-            <h1>📦 Sistema de Gestión de Stock</h1>
+            <h1>📦 Sistema de Stock - Llantería</h1>
             <div class="header-actions">
                 <button id="btn-ir-ventas" class="btn btn-success">🛒 Ir a Ventas</button>
-                <button id="btn-refresh" class="btn btn-secondary">🔄 Actualizar</button>
-                <button id="btn-new-product" class="btn btn-primary">➕ Nuevo Producto</button>
+                <button id="btn-nuevo-stock" class="btn btn-primary">➕ Nuevo Stock</button>
             </div>
         </header>
 
-        <!-- Estadísticas -->
-        <div class="stats-container">
-            <div class="stat-card">
-                <h3>Total Productos</h3>
-                <p id="stat-total" class="stat-number">0</p>
-            </div>
-            <div class="stat-card warning">
-                <h3>Stock Bajo</h3>
-                <p id="stat-bajo" class="stat-number">0</p>
-            </div>
-            <div class="stat-card">
-                <h3>Categorías</h3>
-                <p id="stat-categorias" class="stat-number">0</p>
-            </div>
-            <div class="stat-card success">
-                <h3>Valor Total</h3>
-                <p id="stat-valor" class="stat-number">$0.00</p>
-            </div>
-        </div>
-
         <!-- Filtros -->
-        <div class="filters">
-            <input type="text" id="search-input" placeholder="🔍 Buscar por código, nombre o categoría..." class="search-input">
-            <select id="category-filter" class="filter-select">
-                <option value="">Todas las Categorías</option>
-            </select>
-            <button id="btn-stock-bajo" class="btn btn-warning">⚠️ Ver Stock Bajo</button>
+        <div class="filters-section">
+            <h2>Filtros</h2>
+            <div class="filters">
+                <select id="filter-tipo" class="filter-select">
+                    <option value="">Todas las Familias (Tipos)</option>
+                </select>
+                <select id="filter-estado" class="filter-select">
+                    <option value="">Todos los Estados</option>
+                    <option value="ACTIVO">Activos</option>
+                    <option value="AGOTADO">Agotados</option>
+                </select>
+                <input type="text" id="search-input" placeholder="🔍 Buscar por código o nombre..." class="search-input">
+            </div>
         </div>
 
-        <!-- Tabla de Productos -->
+        <!-- Tabla de Stock -->
         <div class="table-container">
-            <table id="products-table">
+            <table id="stock-table">
                 <thead>
                     <tr>
                         <th>Código</th>
-                        <th>Nombre</th>
-                        <th>Categoría</th>
-                        <th>Stock</th>
-                        <th>Stock Mín</th>
-                        <th>Precio Compra</th>
+                        <th>Producto</th>
+                        <th>Tipo</th>
+                        <th>Número Lote</th>
+                        <th>Stock Inicial</th>
+                        <th>Stock Actual</th>
+                        <th>Stock Vendido</th>
                         <th>Precio Venta</th>
-                        <th>Margen</th>
-                        <th>Proveedor</th>
-                        <th>Acciones</th>
+                        <th>Fecha Entrada</th>
+                        <th>Fecha Terminación</th>
+                        <th>Días Activo</th>
+                        <th>Estado</th>
                     </tr>
                 </thead>
-                <tbody id="products-body">
+                <tbody id="stock-body">
                     <tr>
-                        <td colspan="10" class="loading">Cargando productos...</td>
+                        <td colspan="12" class="loading">Cargando stock...</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
 
-    <!-- Modal para Nuevo/Editar Producto -->
-    <div id="modal" class="modal hidden">
+    <!-- Modal Nuevo Stock -->
+    <div id="modal-nuevo-stock" class="modal hidden">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 id="modal-title">Nuevo Producto</h2>
+                <h2>➕ Comprar Nuevo Stock</h2>
                 <button id="btn-close-modal" class="btn-close">✕</button>
             </div>
-            <form id="product-form">
-                <div class="form-row">
-                    <div class="form-group">
-                        <label>Código *</label>
-                        <input type="text" id="input-codigo" required>
-                    </div>
-                    <div class="form-group">
-                        <label>Nombre *</label>
-                        <input type="text" id="input-nombre" required>
-                    </div>
-                </div>
 
+            <div class="modal-body">
                 <div class="form-group">
-                    <label>Descripción</label>
-                    <textarea id="input-descripcion" rows="3"></textarea>
+                    <label>Seleccionar Producto</label>
+                    <select id="select-producto" class="form-control" required>
+                        <option value="">-- Seleccione un producto --</option>
+                    </select>
                 </div>
 
-                <div class="form-row">
-                    <div class="form-group">
-                        <label>Categoría</label>
-                        <input type="text" id="input-categoria" list="categorias-list">
-                        <datalist id="categorias-list"></datalist>
-                    </div>
-                    <div class="form-group">
-                        <label>Proveedor</label>
-                        <input type="text" id="input-proveedor">
-                    </div>
+                <div class="producto-info hidden" id="producto-info">
+                    <h3 id="info-nombre"></h3>
+                    <p><strong>Código:</strong> <span id="info-codigo"></span></p>
+                    <p><strong>Tipo:</strong> <span id="info-tipo"></span></p>
+                    <p><strong>Precio Venta:</strong> S/ <span id="info-precio"></span></p>
+                    <p><strong>Stock Total Actual:</strong> <span id="info-stock-actual"></span> unidades</p>
                 </div>
 
-                <div class="form-row">
-                    <div class="form-group">
-                        <label>Precio Compra *</label>
-                        <input type="number" id="input-precio-compra" step="0.01" min="0" required>
+                <form id="form-nuevo-lote" class="hidden">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label>Cantidad de Stock *</label>
+                            <input type="number" id="input-stock" min="1" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Precio de Compra *</label>
+                            <input type="number" id="input-precio-compra" step="0.01" min="0" required>
+                        </div>
                     </div>
-                    <div class="form-group">
-                        <label>Precio Venta *</label>
-                        <input type="number" id="input-precio-venta" step="0.01" min="0" required>
-                    </div>
-                </div>
 
-                <div class="form-row">
                     <div class="form-group">
-                        <label>Stock Actual *</label>
-                        <input type="number" id="input-stock-actual" min="0" required>
+                        <label>Fecha de Entrada</label>
+                        <input type="datetime-local" id="input-fecha-entrada">
                     </div>
+
                     <div class="form-group">
-                        <label>Stock Mínimo</label>
-                        <input type="number" id="input-stock-minimo" min="0" value="0">
+                        <label>Observaciones</label>
+                        <textarea id="input-observaciones" rows="3" placeholder="Ej: Proveedor, condiciones, etc."></textarea>
                     </div>
-                </div>
 
-                <div class="form-group">
-                    <label>Ubicación</label>
-                    <input type="text" id="input-ubicacion" placeholder="Ej: Almacén A - Estante 1">
-                </div>
-
-                <div class="modal-actions">
-                    <button type="button" id="btn-cancel" class="btn btn-secondary">Cancelar</button>
-                    <button type="submit" class="btn btn-primary">Guardar</button>
-                </div>
-            </form>
+                    <div class="modal-actions">
+                        <button type="button" id="btn-cancelar" class="btn btn-secondary">Cancelar</button>
+                        <button type="submit" class="btn btn-primary">Registrar Nuevo Lote</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 
     <script src="js/api.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/stock.js"></script>
 </body>
 </html>
