--- a/index.html
+++ b/index.html
@@ -339,6 +339,7 @@
     </div>
 
     <script src="js/api.js"></script>
+    <script src="js/proveedores.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/llantas.js"></script>
     <script src="js/servicios.js"></script>
